# fastapi-monorepo-template

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Justfile  LICENSE.md  README.md  pyproject.toml
pyapi-api/: pyproject.toml
pyapi-api/src/pyapi_api/: __init__.py
