[project]
name = "template"
version = "0.1.0"
description = "Template for FastAPI applications."
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [{ name = "Tho Nguyen", email = "contact@naiwaaa.simplelogin.com" }]
requires-python = ">=3.13,<3.14"
dependencies = []

[tool.uv.workspace]
members = ["template-*"]

[dependency-groups]
dev = ["mypy>=1.18.2", "pytest>=8.4.2"]

[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "pep440"
version_provider = "uv"
