[project]
name = "template"
version = "0.1.0"
description = "Template for FastAPI applications."
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [{ name = "Tho Nguyen", email = "contact@naiwaaa.simplelogin.com" }]
requires-python = ">=3.13,<3.14"
dependencies = []

[tool.uv.workspace]
members = ["template-*"]

[dependency-groups]
dev = [
  "ipython>=9.5.0",
  "ruff>=0.13.1",
  # type checking
  "mypy[dmypy,faster-cache]>=1.18.2",
  # testing
  "pytest>=8.4.2",
  "pytest-benchmark>=5.1.0",
  "pytest-clarity>=1.0.1",
  "pytest-cov>=7.0.0",
  "pytest-instafail>=0.5.0",
  "pytest-memray>=1.8.0",
  "pytest-mock>=3.15.1",
  "pytest-pretty>=1.3.0",
  "pytest-randomly>=4.0.1",
  "hypothesis>=6.140.2",
]

[tool.mypy]
mypy_path = "src"
python_version = "3.12"
exclude = [".cache/", ".venv/"]
# disallow dynamic typing
disallow_any_explicit = true
disallow_any_generics = true
# untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
# none and optional handling
implicit_optional = false
strict_optional = true
# configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
# miscellaneous strictness flags
allow_redefinition = false
enable_error_code = [
  "redundant-self",
  "redundant-expr",
  "possibly-undefined",
  "truthy-bool",
  "truthy-iterable",
  "ignore-without-code",
  "unused-ignore",
  "narrowed-type-not-subtype",
]
implicit_reexport = false
strict_concatenate = true
strict_equality = true
strict = true
# configuring error messages
show_error_context = true
show_column_numbers = true
hide_error_codes = false
# incremental mode
cache_dir = ".cache/mypy"
# advanced options
# plugins = ["pydantic.mypy"]
# miscellaneous
warn_unused_configs = false

[[tool.mypy.overrides]]
module = ["matplotlib.*", "sklearn.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
addopts = [
  # general
  "--exitfirst",
  "-vv",
  "--failed-first",
  # reporting
  "--durations=5",
  "-ra",
  "--showlocals",
  # warnings
  "--strict-config",
  "--strict-markers",
  # collection
  # "--ignore-glob=**/fixtures/*",
  "--import-mode=importlib",
  "--doctest-modules",
  "--doctest-continue-on-failure",
  # pytest-cov
  "--cov",
  "--cov-report=term-missing:skip-covered",
  "--cov-config=pyproject.toml",
  # pytest-memray
  "--memray",
  "--most-allocations=5",
  # pytest-clarity
  "--diff-symbols",
  # pytest-instafail
  "--instafail",
  # pytest-benchmark
  "--benchmark-warmup=on",
  "--benchmark-columns=min,mean,stddev,outliers,rounds,iterations",
  "--benchmark-sort=mean",
  "--benchmark-disable-gc",
  "--benchmark-storage=file://./.cache/benchmarks",
  "--benchmark-disable",
  # hypothesis
  "--hypothesis-show-statistics",
  "--hypothesis-explain",
]
cache_dir = ".cache/pytest"
doctest_optionflags = "NUMBER IGNORE_EXCEPTION_DETAIL"
markers = ["slow: mark tests as slow"]
testpaths = ["src", "tests"]
verbosity_assertions = 2
xfail_strict = true

[tool.coverage.run]
source = ["src"]
branch = true
data_file = ".cache/coverage"
relative_files = true

[tool.coverage.report]
fail_under = 0
show_missing = true
skip_covered = true
exclude_lines = [
  "no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "pep440"
version_provider = "uv"
